My Second Commit just some css changes

--- a/Kebenca/src/main/resources/templates/_footer.html
+++ b/Kebenca/src/main/resources/templates/_footer.html
@@ -1,4 +1,30 @@
 <div class="footer-container" xmlns:th="http://www.thymeleaf.org">
   
+  <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          
+
+          <div class=>
+            <ul class="footer-links">
+              <li><a th:href="@{/}">Comfy Home</a>|</li>
+              <li><a th:href="@{/productList}">Comfy Products</a>|</li>
+              <li><a th:href="@{/shoppingCart}">Comfy Cart</a>|</li>
+        
+            </ul>
+          </div>
+        </div>
+        <hr>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by 
+         <a href="https://www.instagram.com/babyblanketsati/">ComfyBlankeds</a>.
+            </p>
+          </div>
+        </div>
+      </div>
+</footer>
    
 </div>
