--- a/Kebenca/src/main/resources/templates/_menu.html
+++ b/Kebenca/src/main/resources/templates/_menu.html
@@ -4,7 +4,7 @@
    <a th:href="@{/}">Comfy Home</a>
    |
    <a th:href="@{/productList}">
-   Comfy Things
+   Comfy Products
    </a>
    |
    <a th:href="@{/shoppingCart}">
