--- a/Kebenca/src/main/resources/templates/productList.html
+++ b/Kebenca/src/main/resources/templates/productList.html
@@ -10,7 +10,12 @@
       <th:block th:include="/_header"></th:block>
       <th:block th:include="/_menu"></th:block>
        
-      <div class="page-title">Product List</div>
+      <div class="page-title">Comfy Products</div>
+      <p style="text-align: left;">Please choose your yarn color .<br>
+      
+      Blanket will be ready to ship within 1-3 days.
+      <br>
+Blankets in stock are 25 inches x 23 inches, but can be made to order if you prefer a different size.</p>
        
       <div class="product-preview-container" th:each="prodInfo : ${paginationProducts.list}">
          <ul>
