--- a/Kebenca/src/main/resources/static/styles.css
+++ b/Kebenca/src/main/resources/static/styles.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
 
+:root {
+	--main-color: #d54d7b;
+    --second-color: #195617;
+    --grey-color: #7a7c7f;
+}
+
 html {
     background: white;
 }
@@ -28,12 +34,13 @@ body {
 .page-title  {
     text-align: left;
     margin:10px 0px;
-    color: #7a7c7f; 
+    color: var(--main-color); 
     font-size: 29px; 
     font-family: "Libre Baskerville", serif; 
     line-height: 45px; 
     text-shadow: 0 1px 1px #fff; 
 }
+
 .page-title a {
 	 color: #d54d7b;
     font-weight: bold;
@@ -103,6 +110,12 @@ color: white;
     font-weight: normal; margin-bottom: 0px; 
     margin-top: 40px; text-align: center; 
     text-shadow: 0 1px 1px #fff;
+    animation: color-change1 3s infinite; 
+}
+@keyframes color-change1 {
+  0% { color: #d54d7b; }
+  50% { color: #7a7c7f; }
+ 1000% { color: #d54d7b; }
 }
   
 .container  {
@@ -125,6 +138,7 @@ color: white;
     border: none;
     padding: 5px;
     width: 250px;
+    border-radius: 10px;
     margin: 10px ;
     display: inline-block;
     text-align:left;
@@ -239,7 +253,7 @@ table td {
     color: #009879;
 }
 
-
+/**-------------------------- Carosel-----------------------------------**/
 .slider-body {
   height: 100%;
   
@@ -267,10 +281,9 @@ table td {
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
   
-  /*
+  
   scroll-snap-points-x: repeat(300px);
   scroll-snap-type: mandatory;
-  */
 }
 .slides::-webkit-scrollbar {
   width: 10px;
@@ -287,7 +300,7 @@ table td {
   scroll-snap-align: start;
   flex-shrink: 0;
   width: 100%;
-  height: 600px;
+  height: 400px;
   margin-right: 50px;
   border-radius: 10px;
   background: #eee;
@@ -320,7 +333,7 @@ table td {
   top: 0;
   left: 0;
   width: 100%;
-  height: 600px;
+  height: 400px;
 }
 
 .slider > a {
@@ -345,3 +358,97 @@ table td {
 .inputhover:hover {
 	border: 2px solid #d54d7b;
 }
+
+
+/**-------------------------- FOOTER-----------------------------------**/
+.site-footer
+{
+  background-color:#e2e2e2;
+  padding:10px 0 20px;
+  font-size:15px;
+  line-height:24px;
+  color:#737373;
+}
+.site-footer hr
+{
+  border-top-color: var(--main-color);
+  opacity:1
+}
+.site-footer h6
+{
+  color: var(--main-color);
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:0px;
+  letter-spacing:2px
+}
+.site-footer a
+{
+  color: #737373;
+}
+.site-footer a:hover
+{
+  text-decoration:none;
+}
+.footer-links
+{
+  list-style:none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-links li
+{
+  display:block
+}
+.footer-links a
+{
+  color:#737373
+}
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+{
+  color: white;
+    background-color: #d54d7b;
+  text-decoration:none;
+}
+.footer-links.inline li
+{
+  display:inline-block
+}
+
+.copyright-text
+{
+  margin:0
+}
+@media (max-width:991px)
+{
+  .site-footer [class^=col-]
+  {
+    margin-bottom:30px
+  }
+}
+@media (max-width:767px)
+{
+  .site-footer
+  {
+    padding-bottom:0
+  }
+  .site-footer .copyright-text,.site-footer .social-icons
+  {
+    text-align:center
+  }
+}
+
+@media (max-width:767px)
+{
+  .social-icons li.title
+  {
+    display:block;
+    margin-right:0;
+    font-weight:600
+  }
+}
+
+/*sssssssssssssssssssssssssssssssssssssssssssssssssss*/
+
